...
                            ContentBadge(variant: .solid, text: "뱃지")
                                .size(.small)
                                .colorStyle(.neutral())
                                .if(isAccessoryExist)
                        },
                        contentView: {
                            TextArea(text: .constant("테스트 텍스트입니다."))
                                .if(isContentExist)
                        }
                    ),
                    .init(
                        label: isLabelExist ? "중간" : "",
                        labelAccessoryView: { AnyView(EmptyView()) },
...
                                .if(isContentExist)
                        }
                    )
                ]
            )
            
            Text("Options").bold()
            
            HStack {
                Text("Label")
                Control.switch(checked: isLabelExist) {
                    isLabelExist = $0
                    isAccessoryExist = $0
...
